# brujulavirtual-api-gateway

./: .env  .gitignore  Cargo.toml  README.md
http/: auth_controller.http
src/: main.rs
src/api_gateway/: config.rs  mod.rs  modules.rs  router.rs  server.rs
src/auth/: mod.rs
src/auth/application/: jwt_service.rs
src/auth/domain/ports/: auth_repository.rs  auth_service.rs  mod.rs
src/auth/infrastructure/: mod.rs
src/auth/infrastructure/controllers/: auth_controller.rs
src/auth/infrastructure/repositories/: mod.rs  ms_auth_repository.rs
src/common/: axios.rs  mod.rs
src/controllers/: auth_controller.rs  mod.rs
src/services/: auth_service.rs
