[package]
name = "brujulavirtual-api-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.4"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
env_logger = "0.11.3"