[package]
name = "brujulavirtual-api-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.198", features = ["derive"] }
env_logger = "0.11.3"
reqwest = { version = "0.12.4", features = ["json"] }
log = "0.4.21"
dotenv = "0.15"
jsonwebtoken = "9.3.0"
